# OAuth-Server

./: .env.example  .gitignore  BOAS_PRATICAS.md  Dockerfile  README.md  SECURITY.md  docker-compose.yml  init-db.sh  main.py  pyproject.toml  test_auth.py  test_oauth.py
app/: __init__.py  config.py  logging_config.py  middleware.py
app/models/: __init__.py  database.py  refresh_token.py  user.py
app/routers/: auth.py
app/schemas/: __init__.py  refresh.py  token.py  user.py
app/utils/: __init__.py  security.py
